# myairtable

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  OUTPUT_CODE_REVIEW.md  README.md  airtable_meta.py  airtable_meta_types.py  airtable_typegen.py  eslint.config.mts  main.py  meta.py  package.json  playground.py  playground.ts  pyproject.toml  test.py  tsconfig.json
.claude/: settings.local.json
.github/workflows/: check.yml
_old/: airtable_meta.py  airtable_typegen.py  airtable_typegen_helpers.py  airtable_typegen_python.py  airtable_typegen_typescript.py
_old/static/: __init__.py  airtable_table.py  dict_table.py  helpers.py  helpers.ts  orm_table.py  table_helpers.py
src/: csv.py  formula_condenser.py  formula_formatter.py  formula_highlighter.py  formula_tokenizer.py  helpers.py  markdown.py  mermaid.py  mermaid_to_image.py  meta.py  meta_types.py  progress.py  python.py  timer.py  typescript.py  write_to_file.py
static/python/: __init__.py  airtable_base_model.py  airtable_table.py  dict_table.py  formula.py  formula_dynamic.py  helpers.py  orm_table.py  pydantic_table.py  special_types.py  table_helpers.py
static/typescript/: airtable-model.ts  airtable-record.ts  airtable-table.ts  formula.ts  helpers.ts  linked-record.ts  special-types.ts  special_types.ts
tests/: test_formula_condenser.py  test_formula_formatter.py  test_formula_highlighter.py
