[project]
name = "myairtable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pyairtable>=3.2.0",
    "pydantic>=2.11.7",
    "typer>=0.16.1",
]

[tool.ruff]
line-length = 150
extend-exclude = ["output"]

[tool.ruff.lint]
extend-select = ["I", "N"]
ignore = ["N999"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
